--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   firebase_messaging: ^14.7.6
   flutter_local_notifications: ^16.2.0
   shared_preferences: ^2.2.2
+  google_sign_in: ^6.1.6
 
 
 dev_dependencies:
